Fix Button mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -397,6 +397,7 @@
 
   .btn {
     padding: 10px 14px;
+    font-size: 14px;
   }
 }
 
